file(GLOB SOURCES *.cc *.h)
include_directories(${PROJECT_SOURCE_DIR}/3rdparty/evpp)
link_directories(${PROJECT_SOURCE_DIR}/3rdparty/evpp/build-release/lib/)
if (UNIX)
    set(LIBRARIES mpic glog ${Boost_LIBRARIES})
else (UNIX)
    set(LIBRARIES mpic_static glog ${Boost_LIBRARIES})
endif (UNIX)

add_library(nfmpic_module_echo SHARED ${SOURCES})
target_link_libraries(nfmpic_module_echo ${LIBRARIES})
